--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p>Hello</p>
+<!-- <p>Hello</p>
 
 
 <div class="container">
@@ -16,4 +16,35 @@
 
 
 
-</div>
+</div> -->
+
+<!-- <div>
+  <form>
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name.." >
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname"  placeholder="Your last name.." >
+  
+    <button type="button" (click)="callValue()" >Submit</button>
+  </form><br><br>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">FirstName</th>
+        <th scope="col">LastName</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>  </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table> -->
+
+
+<app-coffeeheader></app-coffeeheader>
