--- a/my-first-app/src/app/app.component.css
+++ b/my-first-app/src/app/app.component.css
@@ -1,4 +1,4 @@
-input[type=text], select {
+/* input[type=text], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -6,12 +6,13 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
+  } */
   
   
   
-  div {
+  /* div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-  }
+  } */
+  
