--- a/my-first-app/src/app/footer/footer.component.html
+++ b/my-first-app/src/app/footer/footer.component.html
@@ -1,6 +1,38 @@
-<p>footer works!</p>
+<!-- <p>footer works!</p>
 <p>{{itemtoget}}</p>
 <p>{{itemtoget2}}</p>
 
 <p>{{arrget}}</p>
+ -->
+
+
+<!-- 
+ <p>{{this.Info.counter}}</p>
+<input type="text" >
+
+
+ -->
+<p></p>
+ <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        
+        <th scope="col">FirstName</th>
+        <th scope="col">LastName</th>
+        <th scope="col">Email</th>
+        <th scope="col">Passowrd</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      
+      <tr>
+        <td>{{data.userdata.firstname}}</td>
+        <td>{{data.userdata.lastname}}</td>
+        <td>{{data.userdata.email}}</td>
+        <td>{{data.userdata.password}}</td>
+      </tr>
+    
+    </tbody>
+  </table>
 
