--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -163,6 +163,7 @@
 
  </div>
  -->
+<!--  
 <div class="cart">
 <h2>Cart : {{counter}} </h2>
 </div>
@@ -184,7 +185,6 @@
       <td>{{cartItem.Qty}}</td>
     </tr>
     <tr>
-    
       <td>Total</td>
       <td>{{totalAmt}}</td>
       <td></td>
@@ -196,6 +196,111 @@
   <app-productdescription (descriptionItemEvent)="addItemToCart($event)"></app-productdescription>
   
 
+ -->
+
+<!--  
+ <p>{{getdate}}</p>
+ <p>{{getinfo}}</p>
 
 
 
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">Address</th>
+        <th scope="col">City</th>
+        <th scope="col">Phone</th>
+        <th scope="col">website</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      
+      <tr *ngFor="let data of jsondata">
+        <td>{{data.id}}</td>
+        <td>{{data.name}}</td>
+        <td>{{data.username}}</td>
+        <td>{{data.address.street}}</td>
+        <td>{{data.address.city}}</td>
+        <td>{{data.phone}}</td>
+        <td>{{data.website}}</td>
+      </tr>
+    
+    </tbody>
+  </table>
+
+
+  <button class="btn btn-primary" (click)="dt.increment()"> Counter</button>
+  <app-footer></app-footer>
+  Name:<input type="text" #newItem [ngModel]="item">
+   -->
+
+  
+   <!-- <div class="container">
+   <form #myForm="ngForm" (ngSubmit)="onSubmitofform(myForm.value)" >
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email" [ngModel]="user.email" name="email" required>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Password</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Password" [ngModel]="user.password" name="password" required>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress">Address</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" [ngModel]="user.address" name="address" required>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress2">Address 2</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" [ngModel]="user.address2" name="address2" required>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputCity">City</label>
+        <input type="text" class="form-control" id="inputCity" [ngModel]="user.city" name="city" required>
+      </div>
+
+      <div class="form-group col-md-2">
+        <label for="inputZip">Zip</label>
+        <input type="text" class="form-control" id="inputZip" [ngModel]="user.zip" name="city" required>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!myForm.form.valid">Sign in</button>
+  </form>
+</div>
+   -->
+
+<!-- 
+   <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm.value)">
+    <div class="form-group">
+      <label for="exampleInputEmail1">FirstName</label>
+      <input type="text" class="form-control" id="fname" [ngModel]="userdata.firstname" name="firstname">
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputPassword1">LastName</label>
+      <input type="text" class="form-control" id="lname" [ngModel]="userdata.lastname" name="lastname">
+    </div>
+
+    <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [ngModel]="userdata.email" name="email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" [ngModel]="userdata.password" name="password">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+  <app-footer></app-footer>
+ -->
+Enter Number:
+<input type="number" id="number" [ngModel]="number">
+<button type="button" (click)="printNumber()">Submit</button>
