--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -230,13 +230,12 @@
       </tr>
     
     </tbody>
-  </table>
+  </table> -->
 
 
   <button class="btn btn-primary" (click)="dt.increment()"> Counter</button>
   <app-footer></app-footer>
-  Name:<input type="text" #newItem [ngModel]="item">
-   -->
+
 
   
    <!-- <div class="container">
