--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -233,8 +233,8 @@
   </table> -->
 
 
-  <button class="btn btn-primary" (click)="dt.increment()"> Counter</button>
-  <app-footer></app-footer>
+  <!-- <button class="btn btn-primary" (click)="dt.increment()"> Counter</button>
+  <app-footer></app-footer> -->
 
 
   
@@ -300,7 +300,8 @@
 
   <app-footer></app-footer>
  -->
-Enter Number:
+
+<!-- Enter Number:
 <input type="text" id="number" [(ngModel)]="number">
 <button type="button" (click)="printTable()">Submit</button>
 
@@ -314,4 +315,8 @@ Enter Number:
     Price : <input type="number" name="price" #price><br>
     <button type="submit" (click)="printDays(from.value, to.value, price.value)">submit</button>
 
-</form>
+</form> -->
+
+<!-- <app-reactiveformmodule></app-reactiveformmodule> -->
+
+<app-reactive-address-form></app-reactive-address-form>
