--- a/my-first-app/src/app/app.component.css
+++ b/my-first-app/src/app/app.component.css
@@ -26,10 +26,14 @@
   .green{
     color:green;
   }
-  tr,td{
+   tr,table,td{
     border: 1px solid black;
+    padding-right: 20px;
   }
-  .aqua{
+  td{
+    padding-right: 10px;
+  }
+  .aqua{ 
     background-color: aqua;
   }
 
